# taxrates_download_api

./: Makefile  Makefile.am  Makefile.in  config.ini  config.status  configure  configure.ac  exe.sh  gmon.out  readme.txt
.deps/: main.Po  renesolalog.Po
autom4te.cache/: output.1  traces.0  traces.1
csv/201602/: TAXRATES_ZIP5_AL201602.csv  TAXRATES_ZIP5_AR201602.csv  TAXRATES_ZIP5_AZ201602.csv  TAXRATES_ZIP5_CA201602.csv  TAXRATES_ZIP5_CO201602.csv  TAXRATES_ZIP5_FL201602.csv  TAXRATES_ZIP5_ID201602.csv  TAXRATES_ZIP5_IL201602.csv  TAXRATES_ZIP5_LA201602.csv  TAXRATES_ZIP5_MN201602.csv  TAXRATES_ZIP5_MO201602.csv  TAXRATES_ZIP5_NE201602.csv  TAXRATES_ZIP5_NM201602.csv  TAXRATES_ZIP5_NV201602.csv  TAXRATES_ZIP5_NY201602.csv  TAXRATES_ZIP5_OH201602.csv  TAXRATES_ZIP5_OK201602.csv  TAXRATES_ZIP5_SD201602.csv  TAXRATES_ZIP5_TX201602.csv  TAXRATES_ZIP5_VA201602.csv
include/corvusoft/restbed/: byte.hpp  context_placeholder.hpp  context_placeholder_base.hpp  context_value.hpp  http.hpp  logger.hpp  request.hpp  resource.hpp  response.hpp  rule.hpp  service.hpp  session.hpp  session_manager.hpp  settings.hpp  ssl_settings.hpp  status_code.hpp  string.hpp  uri.hpp
resource/: index.html
src/: asiohiper.hpp  client_http.hpp  csv.h  curl_client.hpp  main.cpp  maintest2015.cpp  paypal.hpp  renesolalog.hpp  serverResource.hpp  server_http.hpp
web/apollo/: index.html
